[gd_scene load_steps=3 format=3 uid="uid://cniabtqho0uq3"]

[ext_resource type="Script" uid="uid://y3d6jdvy6v8a" path="res://control.gd" id="1_a4n6n"]
[ext_resource type="Texture2D" uid="uid://chwapr4fce76i" path="res://Sprites/Pantallas/portada.png" id="2_8r26n"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a4n6n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.99997
offset_top = 4.99998
offset_right = 1148.0
offset_bottom = 643.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_8r26n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -89.5
offset_right = 166.0
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Jugar"

[node name="Personajes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Personajes"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Salir"

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Personajes" to="." method="_on_personajes_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
